# delivery-service

./: .gitignore  LICENSE  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_13_1650-af4e914083c0_create_user_role_permission.py
authorization/: __init__.py  depends.py  exceptions.py  models.py  routers.py  schemas.py  utils.py
core/: __init__.py  dao_base.py  database.py  logger_base.py  settings.py
